# poetry-repo-example

my-package/: README.md  pyproject.toml
my-package/.ropeproject/: autoimport.db
my-package/src/my_package/: main.py  x.py
