[tool.poetry]
name = "my-package"
version = "0.1.0"
description = ""
authors = ["Daara Shaw <dev@daara.me>"]
readme = "README.md"
packages = [{include = "my_package", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
